Second collection instance implemantaiton added
