# middleware/validate.js
@@ -26,6 +26,32 @@ const saveEmployee = (req, res, next) => {
     });
 };
 
+const savePokemonType = (req, res, next) => {
+    const isUpdate = req.method === 'PUT';
+    const validationRule = {
+        english: isUpdate ? 'string' : 'required|string',
+        chinese: isUpdate ? 'string' : 'required|string',
+        japanese: isUpdate ? 'string' : 'required|string',
+        effective: 'array',
+        ineffective: 'array',
+        no_effect: 'array'
+    };
+
+
+    validator(req.body, validationRule, {}, (err, status) => {
+        if (!status) {
+            res.status(412).send({
+                success: false,
+                message: 'Validation failed',
+                data: err
+            });
+        } else {
+            next();
+        }
+    });
+};
+
 module.exports = {
-    saveEmployee
+    saveEmployee,
+    savePokemonType
 };
