# routes/index.js
@@ -8,5 +8,6 @@ router.get('/', (req, res) => {
 });
 
 router.use('/employees', require('./employees'));
+router.use('/pokemon_types', require('./pokemonTypes'));
 
 module.exports = router;
